--- a/src/components/ProductPage/components/Details/components/Properties/Properties.module.scss
+++ b/src/components/ProductPage/components/Details/components/Properties/Properties.module.scss
@@ -25,6 +25,10 @@
             .Key {
                 display: none;
             }
+            * {
+                font-family: Montserrat Alternates,sans-serif !important;
+                font-size: 18px !important;
+            }
         }
     }
 }
