--- a/src/components/ShoppingCart/ShoppingCart.module.scss
+++ b/src/components/ShoppingCart/ShoppingCart.module.scss
@@ -60,9 +60,13 @@
             width: 100%;
             left: 0;
             text-align: center;
+            top: 15px;
         }
         h2 {
-            margin-top: 75px;
+            margin-top: 55px;
+        }
+        .TotalSum {
+            margin-top: 35px;
         }
     }
 }
