--- a/src/components/Cart/Cart.module.scss
+++ b/src/components/Cart/Cart.module.scss
@@ -12,8 +12,14 @@
 @media screen and (max-width: 767px) {
     .CartWrp h2 {
         margin-bottom: 0;
-        margin-top: 95px;
+        margin-top: 70px;
         text-align: center;
         padding-bottom: 20px;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 800px) {
+    .CartWrp {
+        width: 100%;
     }
 }
