--- a/src/components/Cart/components/Product/Product.module.scss
+++ b/src/components/Cart/components/Product/Product.module.scss
@@ -130,3 +130,9 @@
         display: none;
     }
 }
+
+@media screen and (min-width: 768px) and (max-width: 800px) {
+    .ProductWrp {
+        width: 100%;
+    }
+}
