--- a/src/components/CategoryMenu/components/Subcategories/Subcategories.module.scss
+++ b/src/components/CategoryMenu/components/Subcategories/Subcategories.module.scss
@@ -15,5 +15,8 @@
         @media screen and (max-width: 767px) {
             flex-direction: column;
         }
+        @media screen and (min-width: 768px) and (max-width: 800px) {
+            justify-content: center;
+        }
     }
 }
