--- a/src/components/Order/OrderForm/OrderForm.module.scss
+++ b/src/components/Order/OrderForm/OrderForm.module.scss
@@ -11,6 +11,7 @@
         text-transform: uppercase;
     }
     .Form {
+        padding-bottom: 35px;
         .FirstRow, .SecondRow, .ThirdRow {
             width: 100%;
             display: flex;
@@ -123,5 +124,11 @@
                 margin-bottom: 30px;
             }
         }
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 800px) {
+    .OrderFormWrp {
+        width: 100%;
     }
 }
