--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -2,6 +2,7 @@
     height: 100%;
     display: inline-block;
     color: #555;
+    background-color: hsla(0,0%,100%,.95);
 }
 .Services, .Phone {
     height: 100%;
