--- a/src/components/Search/components/NotFound/NotFound.module.scss
+++ b/src/components/Search/components/NotFound/NotFound.module.scss
@@ -6,6 +6,7 @@
     padding: 20px;
     box-sizing: border-box;
     width: 100%;
+    z-index: 10;
     .NoResults {
         color: #999;
         margin-bottom: 15px;
