--- a/src/components/Search/components/SearchResults/SearchResults.module.scss
+++ b/src/components/Search/components/SearchResults/SearchResults.module.scss
@@ -7,6 +7,8 @@
     box-sizing: border-box;
     width: 100%;
     display: none;
+    overflow-y: auto;
+    max-height: 80vh;
 }
 .SearchResults.Shown {
     display: block;
