product images functionality + fixes

--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -37,7 +37,7 @@
             &::-webkit-input-placeholder {
                 font-size: 18px;
                 text-indent: 5px;
-                color: #c6c6c6;
+                color: #4e4a4a;
             }
         }
     }
