--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,10 @@
   width: 1000px !important;
 } */
 
+.carousel .slide {
+  background-color: transparent;
+}
+
 @media screen and (max-width: 830px) {
   .AppWrapper {
     padding-top: 135px;
