--- a/src/App.css
+++ b/src/App.css
@@ -30,8 +30,14 @@
   }
 }
 
+@media screen and (max-width: 1100px) {
+  .SearchActive ~ .NavbarWrp .NavbarPhoneNumber {
+    display: none;
+  }
+}
+
 @media screen and (max-width: 1600px) {
-  .SearchActive ~ .NavbarWrp .NavbarPhoneNumber,
+  /* .SearchActive ~ .NavbarWrp .NavbarPhoneNumber, */
   .SearchInactive .NotFoundWrp {
     display: none;
   }
