--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -26,6 +26,9 @@
                 padding-right: 20px;
             }
         }
+        .Email {
+            display: inline-block;
+        }
     }
 
     .HomeLink {
