--- a/src/components/Navbar/components/CatalogNav/CatalogNav.module.scss
+++ b/src/components/Navbar/components/CatalogNav/CatalogNav.module.scss
@@ -45,8 +45,13 @@
 }
 
 @media screen and (max-width: 830px) {
-    .Categories .CategList {
-        top: 69px;
+    .Categories {
+        .CategName {
+            border: none;
+        }
+        .CategList {
+            top: 74px;
+        }
     }
 }
 
