--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -49,6 +49,14 @@
     }
 }
 
+@media screen and (max-width: 920px) {
+    .Search {
+        .Active {
+            width: 220px;
+        }
+    }
+}
+
 @media screen and (max-width: 830px) {
     .Search {
         .Active {
