scroll to products list if subcategory changed (laptops and desktop)

--- a/src/components/Navbar/components/CatalogNav/CatalogNav.module.scss
+++ b/src/components/Navbar/components/CatalogNav/CatalogNav.module.scss
@@ -64,6 +64,14 @@
     }
 }
 
+@media screen and (max-width: 485px) {
+    .Categories {
+        .CategList {
+            top: 96px;
+        }
+    }
+}
+
 @media screen and (max-width: 440px) {
     .CategName {
         max-width: 205px;
