--- a/src/components/ProductPage/components/Details/components/Properties/Properties.module.scss
+++ b/src/components/ProductPage/components/Details/components/Properties/Properties.module.scss
@@ -41,7 +41,7 @@
         }
     }
     .KeyValueWrp:not(.Description) {
-        div:last-child {
+        div:first-child {
             font-weight: 700;
         }
     }
