--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,9 @@
 .carousel .slide {
   background-color: transparent;
 }
+.carousel .thumbs-wrapper .thumb {
+  cursor: pointer;
+}
 
 @media screen and (max-width: 830px) {
   .AppWrapper {
