--- a/src/components/CategoryMenu/CategoryMenu.module.scss
+++ b/src/components/CategoryMenu/CategoryMenu.module.scss
@@ -1,5 +1,20 @@
 .CategoryMenu {
     margin: 30px;
+    .BlocksAndBanner {
+        display: flex;
+        justify-content: space-between;
+        padding: 0 5%;
+        .RotatingBlock {
+            box-sizing: border-box;
+            width: 20%;
+            height: 335px;
+        }
+        .BannersWrp {
+            align-self: center;
+            box-sizing: border-box;
+            width: 52%;
+        }
+    }
 }
 
 @media screen and (max-width: 767px) {
