--- a/src/components/ProductPage/ProductPage.module.scss
+++ b/src/components/ProductPage/ProductPage.module.scss
@@ -54,6 +54,7 @@
         .ImageAreaWrp, .DetailsWrp {
             display: block;
             width: 100%;
+            margin-top: 20px;
         }
     }
 }
