--- a/src/components/Products/Product/components/ProductContent/ProductContent.module.scss
+++ b/src/components/Products/Product/components/ProductContent/ProductContent.module.scss
@@ -21,10 +21,12 @@
         }
         .DiscountPrice {
             text-align: right;
+            font-size: 18px;
         }
         .Price {
             text-align: right;
             clear: both;
+            font-size: 18px;
             &::before {
                 max-width: 110px;
             }
@@ -37,6 +39,8 @@
         color: #555;
     }
     .Price {
+        font-size: 18px;
+        line-height: 1.6;
         color: #333;
     }
     .DiscountPrice + .Price {
@@ -60,7 +64,8 @@
     }
     .ByOneClick {
         color: #6e6ec7;
-        font-size: 19px;
+        font-size: 18px;
+        display: block;
 
         &:hover {
             color: #39f;
