--- a/src/components/HomePage/HomePage.module.scss
+++ b/src/components/HomePage/HomePage.module.scss
@@ -27,6 +27,35 @@
     padding: 10px;
     float: right;
 }
+.PaginatorWrp {
+    padding: 0 85px;
+    text-align: center;
+    font-size: 20px;
+    ul {
+        display: inline-block;
+        list-style: none;
+        li {
+            cursor: pointer;
+            display: inline-block;
+            margin: 0 10px;
+            &:first-child, &:last-child {
+                margin: 0 25px;
+            }
+            a {
+                outline: none;
+            }
+        }
+        .ActivePage {
+            text-decoration: underline;
+        }
+        .DisabledPage {
+            a {
+                color: #aaa;
+                cursor: default;
+            }
+        }
+    }
+}
 
 @media screen and (max-width: 340px) {
     .GoToOrderBtn, .ContinueShoppingBtn {
