--- a/src/components/Navbar/components/CatalogNav/CatalogNav.module.scss
+++ b/src/components/Navbar/components/CatalogNav/CatalogNav.module.scss
@@ -51,6 +51,8 @@
         }
         .CategList {
             top: 74px;
+            max-height: 48vh;
+            overflow: auto;
         }
     }
 }
