--- a/src/components/CategoryMenu/components/Category/Category.module.scss
+++ b/src/components/CategoryMenu/components/Category/Category.module.scss
@@ -56,7 +56,7 @@
 
 @media screen and (max-width: 767px) {
     .Category {
-        margin-right: 0;
+        margin: 10px 15px;
         min-height: 70px;
     }
 }
