--- a/src/components/ProductPage/components/Details/components/SizesShoppingCart/SizesShoppingCart.module.scss
+++ b/src/components/ProductPage/components/Details/components/SizesShoppingCart/SizesShoppingCart.module.scss
@@ -23,7 +23,8 @@
     }
     .Sizes .SizesContent {
         display: flex;
-        padding: 5px 0;
+        padding: 5px 25px 0 0;
+        box-sizing: border-box;
         justify-content: space-between;
         min-width: 240px;
         color: #555;
