--- a/src/components/Products/Product/Product.module.scss
+++ b/src/components/Products/Product/Product.module.scss
@@ -18,6 +18,7 @@
         }
     }
     .ProductArea {
+        overflow: hidden;
         position: relative;
         box-shadow: 0 2px 14px 0 rgba(33,33,37,.2);
         transition: box-shadow .35s ease-in,transform .3s ease-in,opacity .2s ease-in,-webkit-transform .3s ease-in;
