--- a/src/components/ProductPage/components/Details/components/Properties/Properties.module.scss
+++ b/src/components/ProductPage/components/Details/components/Properties/Properties.module.scss
@@ -24,7 +24,7 @@
 
         .Description {
             margin-top: 25px;
-            
+            background-color: transparent !important;
             .Key {
                 display: none;
             }
