--- a/src/components/ProductPage/components/Details/Details.module.scss
+++ b/src/components/ProductPage/components/Details/Details.module.scss
@@ -1,13 +1,43 @@
 .Details {
-    .Title {
-        font-weight: 100;
-        padding-bottom: 20px;
-        border-bottom: 1px solid #dde3ea;
-    }
-    @media screen and (max-width: 767px) {
-        .Title {
-            margin-top: 0;
-            font-size: 21px;
-        }
-    }
+	.Title {
+		font-weight: 100;
+		padding-bottom: 20px;
+		border-bottom: 1px solid #dde3ea;
+	}
+	.StarsAndTotalReviewsWrp {
+		margin-top: 20px;
+	}
+	.NoReviewsMsg {
+		margin: 20px 0 10px;
+		color: #ccc;
+	}
+	.LeaveReviewBtn {
+		align-items: center;
+		background-color: #ff115f;
+		border: 0;
+		border-radius: 4px;
+		color: #fff;
+		cursor: pointer;
+		display: flex;
+		font-size: 14px;
+		font-weight: 500;
+		line-height: 16px;
+		min-height: 46px;
+		padding: 5px 15px;
+		text-align: center;
+		text-transform: uppercase;
+		text-decoration: none;
+		-webkit-transition: .2s;
+		transition: .2s;
+		margin-top: 20px;
+	}
+	.LeaveReviewBtn:disabled {
+		background-color: #bbb;
+	}
+	@media screen and (max-width: 767px) {
+		.Title {
+			margin-top: 0;
+			font-size: 21px;
+		}
+	}
 }
