--- a/src/components/ProductPage/components/Details/components/Properties/components/ReviewsTab/ReviewsTab.module.scss
+++ b/src/components/ProductPage/components/Details/components/Properties/components/ReviewsTab/ReviewsTab.module.scss
@@ -14,7 +14,7 @@
 		font-weight: 500;
 		margin-bottom: 15px;
 	}
-	.ReviewStarsDate, .Comment {
+	.ReviewStarsDate, .Comment, .Pros {
 		margin-bottom: 15px;
 	}
 	.Pros, .Cons {
