--- a/src/components/Navbar/components/CatalogNav/CatalogNav.module.scss
+++ b/src/components/Navbar/components/CatalogNav/CatalogNav.module.scss
@@ -9,7 +9,15 @@
         border-left: 1px solid #e5e9ee;
         padding: 0 12px;
         line-height: 3;
+        max-width: 250px;
         cursor: pointer;
+
+        .Text {
+            display: inline-block;
+            width: calc(100% - 20px);
+            max-height: 100%;
+            overflow: hidden;
+        }
 
         > span {
             vertical-align: top;
@@ -18,6 +26,10 @@
         &:hover, > svg {
             color: #ff115f;
             fill: #ff115f;
+        }
+
+        .AngleIcon {
+            display: inline-block;
         }
 
         .AngleIcon > svg {
