--- a/src/components/CategoryMenu/CategoryMenu.module.scss
+++ b/src/components/CategoryMenu/CategoryMenu.module.scss
@@ -1,5 +1,5 @@
 .CategoryMenu {
-    margin: 30px;
+    // margin: 30px;
     .BlocksAndBanner {
         display: flex;
         justify-content: space-between;
