--- a/src/components/Navbar/components/CatalogNav/CatalogNav.module.scss
+++ b/src/components/Navbar/components/CatalogNav/CatalogNav.module.scss
@@ -1,7 +1,7 @@
 .Categories {
     position: relative;
     height: 100%;
-    display: inline-block;
+    display: none;
 
     .CategName {
         height: 100%;
@@ -72,6 +72,7 @@
 @media screen and (max-width: 768px) {
     .Categories {
         height: auto;
+        display: inline-block;
         .CategName {
             border: none;
         }
