--- a/src/components/Products/Product/Product.module.scss
+++ b/src/components/Products/Product/Product.module.scss
@@ -7,8 +7,10 @@
     .TitleArea {
         color: #555;
         font-size: 20px;
-        padding: 15px 15px 0;
+        padding: 5px 15px 0;
         text-align: center;
+        max-height: 70px;
+        overflow: hidden;
     }
 
     &:hover {
