--- a/src/components/CategoryMenu/components/Categories2/Categories2.module.scss
+++ b/src/components/CategoryMenu/components/Categories2/Categories2.module.scss
@@ -37,7 +37,7 @@
         list-style-image: none;
         padding: 0;
         list-style: none;
-        transition: all 1s ease-in-out;
+        transition: all .6s ease-in-out;
 
         .NavListItem {
             background-color: #658fab;
