--- a/src/components/ContactPhone/ContactPhone.module.scss
+++ b/src/components/ContactPhone/ContactPhone.module.scss
@@ -20,9 +20,9 @@ a {
     a {
         position: relative;
 
-        .PhoneImg {
-            position: absolute;
-            top: -15px;
-        }
+        // .PhoneImg {
+        //     position: absolute;
+        //     top: -15px;
+        // }
     }
 }
