--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,7 @@
 
 @media screen and (max-width: 1100px) {
   .SearchActive ~ .NavbarWrp .NavbarPhoneNumber {
-    display: none;
+    /* display: none; */
   }
 }
 
