--- a/src/components/ShoppingCart/ShoppingCart.module.scss
+++ b/src/components/ShoppingCart/ShoppingCart.module.scss
@@ -52,11 +52,14 @@
             overflow: visible;
         }
     }
+    @media screen and (max-width: 1140px) {
+        padding-top: 45px;
+    }
     @media screen and (max-width: 767px) {
         padding: 15px 25px;
 
         .GoToProducts {
-            margin-top: 10px;
+            margin-top: 30px;
             width: 100%;
             left: 0;
             text-align: center;
