styles for mobile phones

--- a/src/components/Order/Order.module.scss
+++ b/src/components/Order/Order.module.scss
@@ -34,9 +34,9 @@
     .OrderWrp {
         .GoToProducts {
             display: block;
-            width: 100%;
-            left: 0;
-            top: 0;
+            left: 25px;
+            top: 50px;
+            text-align: left;
         }
     }
 }
