--- a/src/components/CategoryMenu/components/Categories2/Categories2.module.scss
+++ b/src/components/CategoryMenu/components/Categories2/Categories2.module.scss
@@ -81,7 +81,7 @@
             visibility: hidden;
             opacity: 0;
             position: absolute;
-            max-width: 315px;
+            width: 315px;
             height: auto;
             text-align: left;
             box-shadow: 0 2px 10px rgba(0, 0, 0, .3);
@@ -120,7 +120,7 @@
     .Nav {
         .NavList {
             max-height: 0;
-            overflow: hidden;
+            overflow-y: auto;
             &.NavListOpened {
                 max-height: 600px;
             }
