--- a/src/components/Products/Product/components/ProductImage/ProductImage.module.scss
+++ b/src/components/Products/Product/components/ProductImage/ProductImage.module.scss
@@ -9,4 +9,9 @@
     img {
         width: 100%;
     }
+
+    @media screen and (max-width: 767px) {
+        padding-right: 5px;
+        padding-left: 5px;
+    }
 }
