--- a/src/components/Products/Products.module.scss
+++ b/src/components/Products/Products.module.scss
@@ -32,6 +32,10 @@
             .ProductPreloaderSpinner {
                 margin: 0% auto;
                 padding-top: 30px;
+
+                @media screen and (max-width: 767px) {
+                    width: 150px;
+                }
             }
         }
 
