--- a/src/components/CategoryMenu/components/Categories2/Categories2.module.scss
+++ b/src/components/CategoryMenu/components/Categories2/Categories2.module.scss
@@ -26,6 +26,10 @@
 
             .NavMenuLink {
                 text-decoration: none;
+                background: none;
+                outline: none;
+                border: none;
+                cursor: pointer;
 
                 .NavMenuLinkIcon {
                     color: #fff;
