--- a/src/components/Filters/components/Sorting/Sorting.module.scss
+++ b/src/components/Filters/components/Sorting/Sorting.module.scss
@@ -1,10 +1,7 @@
 .SortingContainer {
     display: inline-block;
     .Select {
-        &::after {
-            content: '﹀';
-        }
-        // width: 100%;
+        background-color: #fff;
         max-width: 100%;
         height: 32px;
         margin: 0;
